--- a/PhotoStore/App.config
+++ b/PhotoStore/App.config
@@ -3,9 +3,9 @@
     <connectionStrings>
       <!--Data Source=.\SQLEXPRESS;AttachDbFilename="C:\Program Files\Microsoft SQL Server\MSSQL.1\MSSQL\Data\PhotoStore.mdf";Integrated Security=True;Connect Timeout=30;User Instance=True-->
       <!--<add name="CnnStr" connectionString="Data source = ACERSANTOS\SANTOSSERVER2005; initial catalog = PhotoStore; integrated security = false;User ID=sa;Password=santos123"/>-->
-      <add name="CnnStr" connectionString="Data source = ACERSANTOS\MSSQLSERVER2008; initial catalog = PhotoStore_NE; integrated security = True"/>
+      <add name="CnnStr" connectionString="Data source = LAPTOP-N72E2CKE\SQLEXPRESS; initial catalog = PhotoStore_MM; integrated security = True"/>
    <!--<add name="CnnStr" connectionString="Data source = ACERSANTOS\SANTOSSERVER2005; initial catalog = PhotoStore_Data; integrated security = false;User ID=sa;Password=santos123"/>-->
-		<!--<add name="CnnStr" connectionString="Data source = (local)\sqlexpress; initial catalog = PhotoStore_NE; integrated security = true"/>-->
+		<!--<add name="CnnStr" connectionString="Data source = (local)\sqlexpress; initial catalog = PhotoStore_MM; integrated security = true"/>-->
       <!--<add name="CnnStr" connectionString="Data Source=(local)\SQLEXPRESS;AttachDbFilename=C:\Program Files\Microsoft SQL Server\MSSQL.1\MSSQL\Data\PhotoStore.mdf;Integrated Security=True;Connect Timeout=30;User Instance=True"/>-->
     </connectionStrings>
 	<appSettings>
@@ -22,7 +22,7 @@
 		<add key="particularidswithoneitem" value="7;17"/>
 		<add key="admingroup" value="1"/>
     <!--<add key="BranchCode" value="MM"/>-->
-    <add key="BranchCode" value="NE"/>
+    <add key="BranchCode" value="MM"/>
     <add key="showtext" value="Description"/><!--Code if code will be displayed;Description if description will be displayed-->
 		<add key="autocouponadd" value="6"/><!--The expiration setting of coupon in months-->
 		<add key="autogcadd" value="12"/><!--The expiration setting of gift certiifcate in months-->
@@ -34,9 +34,9 @@
     <add key="rejectidsnotincluded" value="3,4,5,10,11,13,14,21,22,23"/>
     <!--<add key="BranchCodeGC" value="MMGC"/>
     <add key="BranchCodeCP" value="MMPC"/>-->
-    <add key="BranchCodeGC" value="NEGC"/>
-    <add key="BranchCodeCP" value="NEPC"/>
-    <add key="GCPrefix" value="MMGC;NEGC"/>
+    <add key="BranchCodeGC" value="MMGC"/>
+    <add key="BranchCodeCP" value="MMPC"/>
+    <add key="GCPrefix" value="MMGC;MMGC"/>
     <add key="MaxChars" value="6"/>
     <add key ="ParentGCCouponIds" value="3,5,23"/>
     <add key="OrderColumnSpacing" value=".625in"/>
@@ -54,11 +54,11 @@
     <add key="CancelDuration" value="1"/>
     <add key="BranchCodes" value="MM;NE"/>
     <add key="RecordPageSize" value="10"/>
-    <add key="InstanceName" value="ACERSANTOS\MSSQLSERVER2008"/>
-    <add key="BackUpPath" value="E:\BackUp\"/>
-    <add key="DBName" value="PhotoStore_NE"/>    
+    <add key="InstanceName" value="LAPTOP-N72E2CKE\SQLEXPRESS"/>
+    <add key="BackUpPath" value="C:\BackUp\"/>
+    <add key="DBName" value="PhotoStore_MM"/>    
     <add key="CmdUtility" value="C:\Program Files\Microsoft SQL Server\100\Tools\Binn\SQLCMD.EXE"/>
-    <add key="MSSQLBackUp" value="E:\PhotoStore\Backup\"/>
+    <add key="MSSQLBackUp" value="C:\Backup\"/>
     <add key="WaitTimeOut" value="30000"/>
     <add key="RetentionDays" value="14"/>
     <add key="BackUpArgument" value="-E -S {0} -q&quot;BACKUP DATABASE {1} TO DISK = '{2}'&quot;"/>
