--- a/PhotoStore.Entity/PhotoStore.Entity.csproj
+++ b/PhotoStore.Entity/PhotoStore.Entity.csproj
@@ -103,6 +103,9 @@
     <Compile Include="vwJobOrderItems.cs" />
     <Compile Include="vwParticularsForRejection.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\DataSources\PrivilegeCard.datasource" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
