--- a/PhotoStore/App.config
+++ b/PhotoStore/App.config
@@ -57,7 +57,7 @@
     <add key="InstanceName" value="LAPTOP-N72E2CKE\SQLEXPRESS" />
     <add key="BackUpPath" value="C:\BackUp\" />
     <add key="DBName" value="PhotoStore_MM" />    
-    <add key="CmdUtility" value="C:\Program Files\Microsoft SQL Server\100\Tools\Binn\SQLCMD.EXE" />
+    <add key="CmdUtility" value="C:\Program Files\Microsoft SQL Server\Client SDK\ODBC\130\Tools\Binn\SQLCMD.EXE" />
     <add key="MSSQLBackUp" value="C:\Backup\" />
     <add key="WaitTimeOut" value="30000" />
     <add key="RetentionDays" value="14" />
